# http-server-with-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  code-analysis.yml  release.yml
include/: http_server.h
public/: index.html
src/: http_server.c  main.c
tests/: test_http_server.c
